Fix to align icon vertical alignment and first item top padding

--- a/src/components/DropDown/index.scss
+++ b/src/components/DropDown/index.scss
@@ -48,7 +48,11 @@
 
     .item {
       &:first-child {
-        padding-top: 15px;
+        padding-top: 20px;
+      }
+
+      .icon {
+        margin-top: 2px;
       }
 
       a {
